--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           content="width=device-width,   /* Ширина по размеру экрана */
                   initial-scale=1.0,    /* Начальный масштаб 100% */
                   maximum-scale=1.0,    /* Максимальный масштаб 100% */
-                  user-scalable=no">    /* Запрет масштабирования пальцами -->
+                  user-scalable=no">    /* Запрет масштабирования пальцами */
     <title>Тыкалка</title>
     
     <style>
@@ -27,14 +27,14 @@
 
         /* Стили для заголовка */
         h1 {
-            margin: 20px 0;             /* Отступы сверху/снизу */
-            font-size: 2.5em;           /* Размер шрифта */
+            margin: 40px 0;             /* Отступы сверху/снизу */
+            font-size: 4.5em;           /* Размер шрифта */
         }
 
         /* Стили для счетчика */
         #counter {
-            font-size: 3em;             /* Размер шрифта */
-            margin: 30px 0;             /* Отступы сверху/снизу */
+            font-size: 4em;             /* Размер шрифта */
+            margin: 50px 0;             /* Отступы сверху/снизу */
             font-weight: bold;          /* Жирное начертание */
         }
 
