--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
           content="width=device-width,   /* Ширина по размеру экрана */
                   initial-scale=1.0,    /* Начальный масштаб 100% */
                   maximum-scale=1.0,    /* Максимальный масштаб 100% */
-                  user-scalable=no">    /* Запрет масштабирования пальцами */
+                  user-scalable=no">   
+
     <title>Тыкалка</title>
     
     <style>
@@ -40,8 +41,8 @@
 
         /* Стили для монетки */
         .coin {
-            width: 150px;               /* Ширина изображения */
-            height: 220px;              /* Высота изображения */
+            width: 270px;               /* Ширина изображения */
+            height: 390px;              /* Высота изображения */
             cursor: pointer;            /* Курсор-указатель */
             transition: all 0.1s ease;  /* Плавная анимация изменений */
             object-fit: contain;       /* Сохранение пропорций изображения */
