--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
             display: flex;               /* Гибкий контейнер */
             flex-direction: column;      /* Элементы в колонку */
             align-items: center;         /* Центрирование по горизонтали */
-            min-height: 100vh;          /* Минимальная высота на весь экран */
+           /* min-height: 100vh;          /* Минимальная высота на весь экран */
             margin: 0;                   /* Убираем отступы по умолчанию */
-            padding: 20px;               /* Внутренние отступы */
+           */ padding: 20px;               /* Внутренние отступы */
             background-color: #3A3A3A;   /* Цвет фона */
             color: white;               /* Цвет текста */
             font-family: Arial, sans-serif; /* Шрифт */
             touch-action: manipulation;  /* Блокировка жестов масштабирования */
+
+            height: 100vh;
+            padding: 0;
+            overflow: hidden;
+            
         }
 
         /* Стили для заголовка */
