--- a/index.html
+++ b/index.html
@@ -29,24 +29,25 @@
 
         /* ▼▼▼ ДОБАВЛЕНО НОВЫЙ СТИЛЬ ▼▼▼ */
         .bonus-image {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 200px;
-            height: 200px;
-            opacity: 0;
-            transition: opacity 0.5s, transform 1s;
-            pointer-events: none;
-            z-index: 10;
-            display: none;
-        }
+            position: absolute;       /* Абсолютное позиционирование относительно ближайшего позиционированного предка */
+            top: 50%;                 /* Начальная позиция по вертикали - 50% от высоты родителя */
+            left: 20%;                /* Начальная позиция по горизонтали - 50% от ширины родителя */
+            transform: translate(-50%, -50%); /* Сдвигает элемент на половину его собственных размеров для точного центрирования */
+            width: 200px;             /* Ширина бонусного изображения */
+            height: 200px;            /* Высота бонусного изображения */
+            opacity: 0;               /* Полная прозрачность элемента (невидим по умолчанию) */
+            transition: opacity 0.5s, /* Плавное изменение прозрачности за 0.5 секунды */
+            transform 1s; /* Анимация трансформаций за 1 секунду */
+            pointer-events: none;     /* Игнорирование любых кликов и наведений (сквозной элемент) */
+            z-index: 10;              /* Приоритет слоя (должен быть выше чем у других элементов) */
+            display: none;            /* Полное скрытие элемента (убирает из потока документа) */
+}
 
-        .bonus-image.show {
-            opacity: 1;
-            display: block;
-            transform: translate(-50%, -50%) scale(1.2);
-        }
+    .bonus-image.show {
+            opacity: 1;               /* Полная непрозрачность (отображение элемента) */
+            display: block;           /* Показ элемента как блочного (необходимо для анимации) */
+            transform: translate(-50%, -50%) scale(1.2); /* Увеличение на 20% с сохранением центрирования */
+}
         /* ▲▲▲ КОНЕЦ ДОБАВЛЕНИЯ ▲▲▲ */
 
         /* Стили для заголовка */
@@ -90,7 +91,7 @@
          id="coin">
 
     <!-- ▼▼▼ ДОБАВЛЕНА БОНУСНАЯ КАРТИНКА ▼▼▼ -->
-    <img src="https://example.com/bonus.png" class="bonus-image" id="bonusImage">
+    <img src="monetka.png" class="bonus-image" id="bonusImage">
 
     <script>
         // Инициализация переменных
