--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             top: 50%;                 /* Начальная позиция по вертикали - 50% от высоты родителя */
             left: 20%;                /* Начальная позиция по горизонтали - 50% от ширины родителя */
             transform: translate(-50%, -50%); /* Сдвигает элемент на половину его собственных размеров для точного центрирования */
-            width: 200px;             /* Ширина бонусного изображения */
-            height: 200px;            /* Высота бонусного изображения */
+            width: 100px;             /* Ширина бонусного изображения */
+            height: 100px;            /* Высота бонусного изображения */
             opacity: 0;               /* Полная прозрачность элемента (невидим по умолчанию) */
             transition: opacity 0.5s, /* Плавное изменение прозрачности за 0.5 секунды */
-            transform 1s; /* Анимация трансформаций за 1 секунду */
+            transform 1s;             /* Анимация трансформаций за 1 секунду */
             pointer-events: none;     /* Игнорирование любых кликов и наведений (сквозной элемент) */
             z-index: 10;              /* Приоритет слоя (должен быть выше чем у других элементов) */
             display: none;            /* Полное скрытие элемента (убирает из потока документа) */
@@ -144,8 +144,8 @@
         function incrementCounter() {
             count++;                    // Увеличиваем счет
             counterElement.textContent = count;
-            
-            if(count % 10 === 0 && count !== 0) {
+            // Проверяем каждые 50 очков
+            if(count % 50 === 0 && count !== 0) {
                 showBonus();
             }
         }
