--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                   maximum-scale=1.0,    /* Максимальный масштаб 100% */
                   user-scalable=no">   
 
-    <title>Тыкалка</title>
+    <title>Тыкалка 25</title>
     
     <style>
         /* Основные настройки страницы */
@@ -84,14 +84,10 @@
 </head>
 <body>
     <!-- Структура страницы -->
-    <h1>Тыкалка</h1>
+    <h1>Тыкалка 25</h1>
     <div id="counter">0</div>
-    <img src="coin.png" 
-         class="coin" 
-         id="coin">
-
-    <!-- ▼▼▼ ДОБАВЛЕНА БОНУСНАЯ КАРТИНКА ▼▼▼ -->
-    <img src="monetka.png" class="bonus-image" id="bonusImage">
+    <img src="coin.png" class="coin" id="coin">
+    <img src="monetka.png" class="bonus-image" id="bonusImage">     <!-- ▼▼▼ ДОБАВЛЕНА БОНУСНАЯ КАРТИНКА ▼▼▼ -->
 
     <script>
         // Инициализация переменных
