--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>Тыкалка 25</title>
 
-/* ▼▼▼ СТИЛИ ▼▼▼ */
+// ▼▼▼ СТИЛИ ▼▼▼
     <style>
         /* Основные настройки страницы */
         body {
@@ -95,7 +95,7 @@
     <h1>Тыкалка 25</h1>
     <div id="counter">0</div>
     <img src="coin.png" class="coin" id="coin">
-    <img src="monetka.png" class="bonus-image" id="bonusImage">     /* ДОБАВЛЕНА БОНУСНАЯ КАРТИНКА монетки */
+    <img src="monetka.png" class="bonus-image" id="bonusImage">     // ДОБАВЛЕНА БОНУСНАЯ КАРТИНКА монетки
 
 
 
