--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
             margin: 0;                    /* Убираем отступы по умолчанию */
             background-color: #3A3A3A;    /* Цвет фона */
             color: white;                 /* Цвет текста */
-            font-family: cursive;         /* Шрифт */
             touch-action: manipulation;   /* Блокировка жестов масштабирования */
             height: 100vh;
             padding: 0;
             overflow: hidden;
+            //font-family: cursive;         /* Шрифт */
+            font-family: 
+                'Rubik Doodle Shadow', /* Кастомный шрифт */
+                'Comic Sans MS',       /* Windows fallback */
+                cursive,               /* Общий fallback */
+                sans-serif;            /* Аварийный вариант */
         }
 
         /* Монетка при 50 очках */
