--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
             height: 100vh;
             padding: 0;
             overflow: hidden;
-            //font-family: cursive;         /* Шрифт */
-            font-family: 
-                'Rubik Doodle Shadow', /* Кастомный шрифт */
-                'Comic Sans MS',       /* Windows fallback */
-                cursive,               /* Общий fallback */
-                sans-serif;            /* Аварийный вариант */
+           font-family: 
+                    -apple-system,        /* iOS */
+                    'SF Pro Display',     /* iOS */
+                    'Segoe UI',           /* Windows */
+                    Roboto,               /* Android */
+                    Oxygen-Sans,          /* Linux */
+                    Ubuntu, 
+                    Cantarell,
+                    cursive;
         }
 
         /* Монетка при 50 очках */
